# adversarialcodepierce

./: .gitignore  README.md  bug_detection_attack.py  code_clone_attack.py  code_summarization_attack.py  evaluate.sh  evaluate_bug.sh  evaluate_clone.sh  generate_example.sh  measure.ipynb  measure_randomness.py  preprocess.py  pyproject.toml  random_vectors.py  ranked_token.py  test.ipynb  uncertainty_location.py
acp/: search.py
acp/datasets/: __init__.py  base.py  bug_detection.py  code_clone_detection.py  code_summarization.py
acp/metrics/: base.py  bleu.py  em.py
acp/samples/: base.py  java.py  python.py
acp/strategies/: __init__.py  base.py  heuristic.py  permutation.py  random.py  random_vector.py  states.py
random_search_bug_detection/: heuristic_search_candidates.py  random_permutation.py  random_search.py  random_search_random_vectors.py
random_search_code_summarization/: bleu.py  model.py  run.py  run_example_generation.py  utils.py
scripts/: extract_code_bert_tokens.py  extract_distances.py  extract_java_variables.py  extract_variables.py  filter_tokens.py
tests/: test.py
tests/samples/: test_java_samples.py  test_python_samples.py
tests/strategies/: test_heuristic.py  test_permutation.py  test_random.py  test_random_vector.py
