[tool.poetry]
name = "adversacodepierce"
version = "0.1.0"
description = ""
authors = ["Boqi Chen <boqi.chen@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include="acp"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.lint.dependencies]
bandit = "^1.7.8"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore  = ['F401', 'W503', 'E501']

[tool.isort]
profile = "black"
skip_gitignore = true